Connected Services using IPC

--- a/activityservice/src/main/resources/application.properties
+++ b/activityservice/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=activityservice
 spring.data.mongodb.uri=mongodb+srv://hkovuru:Spring_23usdpu@cluster0.hy0ow.mongodb.net/Activites?retryWrites=true&w=majority&appName=Cluster0
 
 server.port = 8081
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
