--- a/activityservice/src/main/resources/application.properties
+++ b/activityservice/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.data.mongodb.uri=mongodb+srv://hkovuru:Spring_23usdpu@cluster0.hy0ow.mong
 server.port = 8081
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+
+rabbitmq.exchange.name=fitness.exchange
+rabbitmq.queue.name=activity.queue
+rabbitmq.routing.key=activity.tracking
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
